[gd_scene load_steps=4 format=3 uid="uid://c4lhha37xgs1d"]

[ext_resource type="Script" path="res://addons/clonk_importer/import_window.gd" id="1_fk8va"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8vibo"]
content_margin_left = 6.0
content_margin_top = 4.0
content_margin_right = 6.0
content_margin_bottom = 4.0
bg_color = Color(0.113725, 0.133333, 0.160784, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 3
anti_aliasing = false

[sub_resource type="Theme" id="Theme_sf458"]
MarginContainer/constants/margin_bottom = 10
MarginContainer/constants/margin_left = 10
MarginContainer/constants/margin_right = 10
MarginContainer/constants/margin_top = 10
Panel/styles/panel = SubResource("StyleBoxFlat_8vibo")
VBoxContainer/constants/separation = 10

[node name="import_window" type="Window"]
initial_position = 2
title = "Godot Clonk importer"
size = Vector2i(600, 400)
transient = true
theme = SubResource("Theme_sf458")
script = ExtResource("1_fk8va")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Godot Clonk Importer
https://github.com/Elektordi/godot-clonk-import

(c4group executable is only needed if files are packed, in this case all packs will be exploded. If you don't have c4group installed, you have to use plain directories as source.)"
horizontal_alignment = 1
autowrap_mode = 2

[node name="GridContainer" type="GridContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
columns = 3

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Path to c4group executable"

[node name="config_c4group" type="TextEdit" parent="Panel/MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "(If empty, will try to use global system path.)"

[node name="button_browse_c4group" type="Button" parent="Panel/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "...
"

[node name="Label2" type="Label" parent="Panel/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Source directory"

[node name="config_source" type="TextEdit" parent="Panel/MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="button_browse_source" type="Button" parent="Panel/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "...
"

[node name="Label3" type="Label" parent="Panel/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Target directory"

[node name="config_target" type="TextEdit" parent="Panel/MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="button_browse_target" type="Button" parent="Panel/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "...
"

[node name="button_import" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Import"

[node name="button_close" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Close"

[node name="Copyright" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "'Clonk' is a registered trademark of Matthes Bender."
horizontal_alignment = 1

[node name="AcceptDialog" type="AcceptDialog" parent="."]
initial_position = 2
title = "Godot Clonk importer"

[node name="FileDialog_c4group" type="FileDialog" parent="."]
initial_position = 2
title = "Open a File"
size = Vector2i(600, 400)
ok_button_text = "Open"
file_mode = 0

[node name="FileDialog_source" type="FileDialog" parent="."]
initial_position = 2
title = "Open a Directory"
size = Vector2i(600, 400)
ok_button_text = "Select Current Folder"
file_mode = 2

[node name="FileDialog_target" type="FileDialog" parent="."]
initial_position = 2
title = "Open a Directory"
size = Vector2i(600, 400)
ok_button_text = "Select Current Folder"
file_mode = 2

[connection signal="about_to_popup" from="." to="." method="_on_about_to_popup"]
[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/GridContainer/button_browse_c4group" to="." method="_on_button_browse_c4group_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/GridContainer/button_browse_source" to="." method="_on_button_browse_source_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/GridContainer/button_browse_target" to="." method="_on_button_browse_target_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/button_import" to="." method="_on_button_import_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/button_close" to="." method="_on_button_close_pressed"]
[connection signal="file_selected" from="FileDialog_c4group" to="." method="_on_file_dialog_c4group_file_selected"]
[connection signal="dir_selected" from="FileDialog_source" to="." method="_on_file_dialog_source_dir_selected"]
[connection signal="dir_selected" from="FileDialog_target" to="." method="_on_file_dialog_target_dir_selected"]
